--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -11,7 +11,8 @@
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "varrow": ["./lib/index.ts"]
     }
   }
 }
